[package]
name = "conway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drawille = "0.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rand = "0.8.5"

[dependencies.rusqlite]
# Instruct rusqlite to use sqlite bindings from crates rather than on the system locally
version = "0.28.0"
features = ["bundled"]
